# dfdemo

./: .gitignore  CDC with HPE Data Fabric.json  Dockerfile  README-CDC.md  README.md  Tiltfile  catchx-app.sh  catchx-compose.yaml  config.py  constants.py  docker-compose-with-build.yaml  docker-compose.yaml  fragments.py  grant.sql  main.py  mysqld.cnf  pyproject.toml  s3.py  settings.py  start.sh  streams.py  tables.py  utils.py  wgetrc
app/: CDC.md  DF_CDC.xml  Dockerfile  HPE_Data_Fabric_Demo.json  config.py  constants.py  demos.py  entrypoint.sh  fragments.py  ingest_to_iceberg.py  invoke-pyspark.sh  main.py  mysql.cnf  pyproject.toml  restcalls.py  s3.py  tables.py  users.py  utils.py
app/.streamlit/: config.toml
mapr/: .dockerignore  Dockerfile  create-demo-table.sql  create_iceberg_table.py  entrypoint.sh  ingest_to_iceberg.py  invoke-pyspark.sh
mapr/app/: create_iceberg_table.py  main.py  pyproject.toml  utils.py
mesh/: Dockerfile
