[project]
name = "dfdemo"
version = "0.1.0"
description = "Demo Sandbox with Data Fabric"
readme = "README.md"
authors = [
    { name = "Erdinc Kaya", email = "erdincka@msn.com" }
]
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.39.14",
    "faker>=37.5.3",
    "httpx>=0.28.1",
    "mapr-streams-python>=2.6.0",
    "streamlit>=1.46.1",
    "streamlit-js-eval>=0.1.7",
]
